--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ httplib2>=0.18.0
 humanize 
 lxml
 oauth2client
-Pillow>=6.0.0
+Pillow>=8.1.0
 fontTools
 psycopg2
 psycopg2-binary
@@ -43,13 +43,14 @@ requests>=2.18.4
 search-engine-parser>=0.6.1
 speedtest-cli>=2.0.2
 sqlalchemy<=1.3.23
-telethon>=1.14.0 
+Telethon>=1.21.1 
 telethon-session-sqlalchemy>=0.2.6
 urbandict>=0.5
 wikipedia>=1.4.0
 coffeehouse>=2.1.0
 git+https://github.com/johnwmillr/LyricsGenius.git
 git+https://github.com/voins/google-images-download.git@2cd68173c961324a2c41c61e8b6f40a49663ce60
+https://github.com/yt-dlp/yt-dlp/archive/master.zip
 lyricsgenius
 redis>=3.3.10
 PyDrive2
@@ -94,3 +95,4 @@ scikit-image
 pendulum
 opencv-python
 youtube-search-python
+youtube-search
